	* add OpenID 2.0-compliant discovery and authentication request.
	  However, it does NOT yet support the OpenID 2.0 *responses*,
	  so at the present time this will fail in strange ways when
	  logging in to a 2.0 OP.

	* add method on claimed identity object to get delgated URL

0.14: (2007-08-03)

	* allow CGI subclasses (like CGI::Fast) for args.  bug fix
	  from Chris Kastorff <encryptio@gmail.com>.

0.13:
	* work-around bug in some openid servers that don't escape "+".
	  so treat a space as a +.  (from Thomas Sibley
	  <trs@bestpractical.com>)

        * go into dumb mode earlier if it's detected that our cache object
	  isn't working

	* give callers access to the signed_fields from the verified
	  identity object

0.12:
	* required_root in constructor/method/validated_identity

	* allow https identities

	* version 1.1 of the protocol

	* expand entities in link rel

	* reject cached association validation if expiry is in past

0.11:
	* document common error codes from claimed_identity, and
	  cleanup some error handling/codes

	* support openid.mode=cancel

	* respect replace_after and expiry.  do clock compensation
	  between local clock and server.

	* invalidate_handle support

0.10:
        * handle openid.delegate properly (was losing state because I'd
	  put a URL parameter onto the wrong URL)

	* copy all signed parameters into POST args in dumb mode,
	  not a static set (to be future-proof)

0.09:
        * switch to DH/HMAC protocol, not DSA protocol

0.08:
	* more openssl-binary temp file changes.  on second failure (which
	  was previously missing a new method), it also propogates up the
	  error message now, instead of dying, to be more consistent with
	  the other DSA checkers, which never die

0.07:
	* bugfix: use URI::Fetch 0.02, not "0.02" in quotes

	* bugfix: don't set cache if no cache

0.06:
	* wrap Crypt::OpenSSL::DSA verify in eval {} as it can croak

	* use URI::Fetch, which does caching and proper HTTP behavior
