@@ -37,6 +37,12 @@ sub secret {
     $self->{'secret'};
 }
 
+sub type {
+    my $self = shift;
+    die if @_;
+    $self->{'type'};
+}
+
 sub server {
     my Net::OpenID::Association $self = shift;
     Carp::croak("Too many parameters") if @_;
@@ -63,7 +69,7 @@ sub usable {
 # goes into dumb consumer mode.  will do a POST and allocate
 # a new assoc_handle if none is found, or has expired
 sub server_assoc {
-    my ($csr, $server) = @_;
+    my ($csr, $server, $force_reassociate) = @_;
 
     # closure to return undef (dumb consumer mode) and log why
     my $dumb = sub {
@@ -74,13 +80,15 @@ sub server_assoc {
     my $cache = $csr->cache;
     return $dumb->("no_cache") unless $cache;
 
-    # try first from cached association handle
-    if (my $handle = $cache->get("shandle:$server")) {
-        my $assoc = handle_assoc($csr, $server, $handle);
+    unless ($force_reassociate) {
+        # try first from cached association handle
+        if (my $handle = $cache->get("shandle:$server")) {
+            my $assoc = handle_assoc($csr, $server, $handle);
 
-        if ($assoc && $assoc->usable) {
-            $csr->_debug("Found association from cache (handle=$handle)");
-            return $assoc;
+            if ($assoc && $assoc->usable) {
+                $csr->_debug("Found association from cache (handle=$handle)");
+                return $assoc;
+            }
         }
     }
 
